fix: Update navigation styles for fullscreen mode and prevent overflow on body

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,7 @@ body {
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
   overscroll-behavior: none;
+  overflow: hidden;
   padding-bottom: 0;
   padding-bottom: env(safe-area-inset-bottom, 0);
 }
